<resources>
    <string name="app_name">RainbowDice</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="roll">Roll</string>
    <string name="sideColumnClearValue">Clear Value</string>
    <string name="sideColumnRepeats">Repeats</string>
    <string name="sideColumnSymbol">Symbol</string>
    <string name="sideColumnValue">Value</string>
    <string name="sideColumnReroll">Re-roll</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="new_item">New</string>
    <string name="new_dice">New Dice</string>
    <string name="favorites">Favorites:</string>
    <string name="configureDice">Reorder Dice</string>
    <string name="importDice">Import</string>
    <string name="importOK">This feature replaces all configuration in Rainbow Dice with configuration from the file.
        Do you want to import?.</string>
    <string name="exportDice">Export</string>
    <string name="exportOK">Export all of the configuration information and logs from Rainbow Dice into an external file.
        Do you want to export?</string>
    <string name="diceMessageRolling">Rolling&#8230;</string>
    <string name="diceMessageResult">result: %s: %s%s = %s</string>
    <string name="diceMessageResult2">result: %s: %s</string>
    <string name="diceMessageToStartRolling">Shake while rolling</string>
    <string name="diceMessageReRoll">Shake while re-rolling required dice</string>
    <string name="modifiedRoll">(modified roll)</string>
    <string name="diceConfigNbrDice"># Dice</string>
    <string name="diceConfigColor">color</string>
    <string name="diceConfigDetails">Details</string>
    <string name="diceConfigSymbol">Symbol</string>
    <string name="diceConfigValue">Value</string>
    <string name="diceSides">Dice Sides</string>
    <string name="diceMessageStartup">Click on a dice name above to roll, or add new dice by selecting "New Dice" from the menu.</string>
    <string name="errorNoDiceDefinitions">There are dice listed.  Create some with "Choose Dice->New".</string>
    <string name="errorRenameFailed">Rename failed: new dice name cannot be too long or contain directory separators.</string>
    <string name="errorExportFailed">Export failed.</string>
    <string name="errorImportFailed">Import failed.</string>
    <string name="confirm">Delete dice configuration: %s?</string>
    <string name="D1">Bonus</string>
    <string name="D2">Coin</string>
    <string name="D3">D3</string>
    <string name="D4">D4</string>
    <string name="D6">D6</string>
    <string name="D8">D8</string>
    <string name="D10">D10</string>
    <string name="D12">D12</string>
    <string name="D20">D20</string>
    <string name="D30">D30</string>
    <string name="D100">D100</string>
    <string name="diceNumberOfSidesOther">Other</string>
    <string name="diceNumbersString">%s,\n%s,&#8230;,\n%s</string>
    <string name="diceConfigStringRepresentation">%dD%d</string>
    <string name="constantConfigStringRepresentation">%s</string>
    <string name="rerollText">re-roll on: %s</string>
    <string name="settingsMenuItem">Settings</string>
    <string name="openLogFile">Open Log File</string>
    <string name="changeThemeMenuItem">Change Theme</string>
    <string name="recipes">Recipes</string>
    <string name="add">add</string>
    <string name="replace">replace</string>
    <string name="bonusDialogTitle">To which rolls should the bonus apply?</string>
    <string name="currentRoll">Current roll</string>
    <string name="futureRoll">Future rolls</string>
    <string name="bonus">bonus</string>
    <string name="bonusReadOut">Bonus: %d</string>
    <string name="addedBonuses">(added bonuses)</string>
    <string name="addedBonus">(added bonus)</string>
    <string name="selectTheme">Theme:</string>
    <string name="graphicsAPIName">Graphics API:</string>
    <string name="graphicsAPIVersion">Graphics API version:</string>
    <string name="graphicsDeviceName">Graphics Device Name:</string>
    <string name="sensorList">Available Sensors:</string>
    <string name="unknown">Unknown</string>
    <string name="useLegacy">Use OpenGL Graphics</string>
    <string name="useGravity">Use gravity</string>
    <string name="drawRollingDice">Draw dice rolling</string>
    <string name="reverseGravity">Reverse Gravity</string>
    <string name="appVersionName">Rainbow Dice Version</string>
    <string name="linearAccelerationSensor">Linear Acceleration</string>
    <string name="gravitySensor">Gravity</string>
    <string name="accelerometerSensor">Accelerometer</string>

    <string-array name="themeArray">
        <item>Space</item>
        <item>Sky</item>
        <item>Trees</item>
        <item>Adventure</item>
    </string-array>

    <string-array name="operationArray">
        <item>@string/addition</item>
        <item>@string/subtraction</item>
    </string-array>

    <string name="percentile">Percentile</string>
    <string name="fudge">Fudge</string>
    <string-array name="recipes">
        <item>@string/percentile</item>
        <item>@string/fudge</item>
    </string-array>

    <string name="rainbow">rainbow</string>
    <string name="red">red</string>
    <string name="orange">orange</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="purple">purple</string>
    <string name="black">black</string>
    <string name="white">white</string>
    <string-array name="diceColor">
        <item>@string/rainbow</item>
        <item>@string/red</item>
        <item>@string/orange</item>
        <item>@string/yellow</item>
        <item>@string/green</item>
        <item>@string/blue</item>
        <item>@string/purple</item>
        <item>@string/black</item>
        <item>@string/white</item>
    </string-array>
</resources>
