<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollViewDiceLandscape"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <include layout="@layout/customization_dice_list"/>
    </ScrollView>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/customization_die"/>
        <Button
            android:id="@+id/d2Button"
            android:onClick="dxClicked"
            app:layout_constraintCircle="@id/edit_panel"
            app:layout_constraintCircleRadius="180dp"
            app:layout_constraintCircleAngle="50"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/D2" />
        <Button
            android:id="@+id/d3Button"
            android:onClick="dxClicked"
            app:layout_constraintCircle="@id/edit_panel"
            app:layout_constraintCircleRadius="180dp"
            app:layout_constraintCircleAngle="70"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/D3" />
        <Button
            android:id="@+id/d4Button"
            android:onClick="dxClicked"
            android:layout_width="90dp"
            android:layout_height="50dp"
            app:layout_constraintCircle="@id/edit_panel"
            app:layout_constraintCircleRadius="180dp"
            app:layout_constraintCircleAngle="90"
            android:text="@string/D4"
            />
        <Button
            android:id="@+id/d6Button"
            android:onClick="dxClicked"
            android:layout_width="90dp"
            android:layout_height="50dp"
            app:layout_constraintCircle="@id/edit_panel"
            app:layout_constraintCircleRadius="180dp"
            app:layout_constraintCircleAngle="110"
            android:text="@string/D6"
            />
        <Button
            android:id="@+id/d8Button"
            android:onClick="dxClicked"
            android:layout_width="90dp"
            android:layout_height="50dp"
            app:layout_constraintCircle="@id/edit_panel"
            app:layout_constraintCircleRadius="180dp"
            app:layout_constraintCircleAngle="130"
            android:text="@string/D8"
            />

        <Button
            android:id="@+id/d10Button"
            android:onClick="dxClicked"
            android:layout_width="90dp"
            android:layout_height="50dp"
            app:layout_constraintCircle="@id/edit_panel"
            app:layout_constraintCircleRadius="180dp"
            app:layout_constraintCircleAngle="230"
            android:text="@string/D10"
            />
        <Button
            android:id="@+id/d12Button"
            android:onClick="dxClicked"
            android:layout_width="90dp"
            android:layout_height="50dp"
            app:layout_constraintCircle="@id/edit_panel"
            app:layout_constraintCircleRadius="180dp"
            app:layout_constraintCircleAngle="250"
            android:text="@string/D12" />
        <Button
            android:id="@+id/d20Button"
            android:onClick="dxClicked"
            android:layout_width="90dp"
            android:layout_height="50dp"
            app:layout_constraintCircle="@id/edit_panel"
            app:layout_constraintCircleRadius="180dp"
            app:layout_constraintCircleAngle="270"
            android:text="@string/D20" />
        <Button
            android:id="@+id/d30Button"
            android:onClick="dxClicked"
            android:layout_width="90dp"
            android:layout_height="50dp"
            app:layout_constraintCircle="@id/edit_panel"
            app:layout_constraintCircleRadius="180dp"
            app:layout_constraintCircleAngle="290"
            android:text="@string/D30" />
        <Button
            android:id="@+id/d100Button"
            android:onClick="dxClicked"
            android:layout_width="90dp"
            android:layout_height="50dp"
            app:layout_constraintCircle="@id/edit_panel"
            app:layout_constraintCircleRadius="180dp"
            app:layout_constraintCircleAngle="310"
            android:text="@string/D100" />
        <LinearLayout
            android:orientation="horizontal"
            app:layout_constraintCircle="@id/edit_panel"
            app:layout_constraintCircleRadius="130dp"
            app:layout_constraintCircleAngle="180"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/otherButton"
                android:onClick="dxClicked"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:text="@string/diceNumberOfSidesOther" />
            <EditText
                android:id="@+id/otherText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:enabled="false"/>
        </LinearLayout>

        <Button
            android:id="@+id/add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@null"
            android:text="@string/new_item"
            android:onClick="onNew">
        </Button>
        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/delete"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onDelete">
        </Button>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>