<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/customization_main_layout"
    android:orientation="vertical"
    android:divider="?attr/divider"
    android:showDividers="middle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <HorizontalScrollView
        android:id="@+id/scrollViewDice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/customization_dice_list"/>
    </HorizontalScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/customization_main"/>
        <Button
            android:id="@+id/d2Button"
            android:onClick="dxClicked"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toRightOf="@id/d1Button"
            app:layout_constraintRight_toLeftOf="@id/delete"
            app:layout_constraintBottom_toTopOf="@id/d3Button"
            app:layout_constraintTop_toBottomOf="@id/delete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/D2" />
        <Button
            android:id="@+id/d3Button"
            android:onClick="dxClicked"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/d2Button"
            app:layout_constraintBottom_toTopOf="@id/d4Button"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/D3" />
        <Button
            android:id="@+id/d4Button"
            android:onClick="dxClicked"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/d3Button"
            app:layout_constraintBottom_toTopOf="@id/d6Button"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/D4"
            />
        <Button
            android:id="@+id/d6Button"
            android:onClick="dxClicked"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/d4Button"
            app:layout_constraintBottom_toTopOf="@id/d8Button"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/D6"
            />
        <Button
            android:id="@+id/d8Button"
            android:onClick="dxClicked"
            app:layout_constraintLeft_toRightOf="@id/otherButtonLayout"
            app:layout_constraintTop_toBottomOf="@id/d6Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/D8"
            />

        <Button
            android:id="@+id/d10Button"
            android:onClick="dxClicked"
            app:layout_constraintRight_toLeftOf="@id/otherButtonLayout"
            app:layout_constraintTop_toBottomOf="@+id/d12Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/D10"
            />
        <Button
            android:id="@+id/d12Button"
            android:onClick="dxClicked"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d20Button"
            app:layout_constraintBottom_toTopOf="@+id/d10Button"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/D12" />
        <Button
            android:id="@+id/d20Button"
            android:onClick="dxClicked"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d30Button"
            app:layout_constraintBottom_toTopOf="@+id/d12Button"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/D20" />
        <Button
            android:id="@+id/d30Button"
            android:onClick="dxClicked"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d1Button"
            app:layout_constraintBottom_toTopOf="@+id/d20Button"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/D30" />
        <Button
            android:id="@+id/d1Button"
            android:onClick="dxClicked"
            app:layout_constraintTop_toBottomOf="@id/add_item"
            app:layout_constraintRight_toLeftOf="@id/d2Button"
            app:layout_constraintLeft_toRightOf="@id/add_item"
            app:layout_constraintBottom_toTopOf="@+id/d30Button"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/D1" />
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/otherButtonLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/otherButton"
                android:onClick="dxClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diceNumberOfSidesOther" />
            <EditText
                android:id="@+id/otherText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:enabled="false"/>
        </LinearLayout>

        <Button
            android:id="@+id/add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/new_item"
            android:onClick="onNew">
        </Button>
        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="onDelete">
        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>